--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
 pytest-mock==3.12.0
+fakeredis==2.18.0
+locust==2.17.0
 
 # Development
 black==24.1.1
