--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ pytest-cov==4.1.0
 pytest-mock==3.12.0
 fakeredis==2.18.0
 locust==2.17.0
+memory-profiler==0.61.0
+psutil==5.9.6
 
 # Development
 black==24.1.1
