--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core dependencies
 redis==5.0.1
-psycopg2-binary==2.9.9
-pydantic==2.5.3
-pydantic-settings==2.1.0
+psycopg2-binary>=2.9.9
+pydantic>=2.5.3
+pydantic-settings>=2.1.0
 
 # Web framework and API
 fastapi==0.109.0
@@ -14,7 +14,7 @@ loguru==0.7.2
 
 # Async support
 aioredis==2.0.1
-asyncpg==0.29.0
+asyncpg>=0.29.0
 
 # Background tasks and scheduling
 apscheduler==3.10.4
